force-app/main/default/objects/JBCXM__GSColorConfig__c/JBCXM__GSColorConfig__c.object-meta.xml
<CustomObject>
    <description>Stores color configuration at global level.</description>
    <label>GS Color Config</label>
    <nameField>
        <label>GS Color Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GS Color Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>