force-app/main/default/objects/JBCXM__GSColorConfig__c/fields/JBCXM__ColorList__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ColorList__c</fullName>
    <label>Color List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>