force-app/main/default/objects/JBCXM__GSColorConfig__c/fields/JBCXM__Column__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Column__c</fullName>
    <label>Column</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>