force-app/main/default/objects/JBCXM__GSColorConfig__c/fields/JBCXM__Filters__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Filters__c</fullName>
    <label>Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>