force-app/main/default/objects/JBCXM__GSColorConfig__c/fields/JBCXM__Object__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Object__c</fullName>
    <label>Object</label>
    <length>160</length>
    <type>Text</type>
</CustomField>